--- a/src/com/corionis/els/resources/gettingstarted_en_US.html
+++ b/src/com/corionis/els/resources/gettingstarted_en_US.html
@@ -48,8 +48,8 @@ attached, or remote using another ELS instance operating as a Subscriber Listene
 
 <p>Each logical library may span multiple storage devices. This is the same approach used by
 modern media streaming systems, such as Plex, but is also useful for anyone producing large
-volumes of content, videos, music, images, ata, etc. Each storage Location may specify a "Minimum
-Free Space". A library is defined as a Bibliography of storage Locations used by the library.</p>
+volumes of content, videos, music, images, data, etc. Each storage Location may specify a "Minimum
+Free Space". A library is defined as a Bibliography of Sources used by the library.</p>
 
 <p>&nbsp;</p>
 
