--- a/src/com/corionis/els/resources/operations_en_US.html
+++ b/src/com/corionis/els/resources/operations_en_US.html
@@ -76,6 +76,8 @@ Named configurations may be executed:
   <li>Subscriber force quit : Force a remote subscriber listener to quit.</li>
 </ul>
 
+<p>For remote operations both computers use copies of the each other's JSON library files.</p>
+
 <h3>Generate Button</h3>
 <p>The Generate button creates a command line for executing the currently-selected
 operation. Edit and copy (Ctrl-C) as desired, or select the Shortcut button to create a
