--- a/src/com/corionis/els/resources/whitelist_en_US.html
+++ b/src/com/corionis/els/resources/whitelist_en_US.html
@@ -17,6 +17,11 @@
             width: 100%;
         }
 
+        #exam {
+            margin-left: 20px;
+            margin-bottom: -12px;
+        }
+
         th {
             border-bottom: 1px solid ;
             text-align: left;
@@ -47,6 +52,10 @@
 <i><b>Note:</b></i>
 <p>This option must be defined on the command line with the <blockquote>-I | --ip-whitelist [file]</blockquote> option
 or in a listener Operation for them to be used. These Navigator dialogs only edit the files.</p>
+
+<p><i>Examples:</i></p>
+    <p id="exam">10.50.100.10</p>
+    <p id="exam">10.50.100.20</p>
 
 </body>
 </html>
