#117 Minor bug fix if instance does not have all libraries

--- a/src/com/corionis/els/resources/hints_en_US.html
+++ b/src/com/corionis/els/resources/hints_en_US.html
@@ -146,6 +146,12 @@
         but does not perform a back-up operation.
     </p>
 </p>
+<p>
+    <br/>
+    For new remote configurations it is easiest to copy the library and system files to each
+    ELS instance using something like Filezilla.
+</p>
+</p>
 
 <br/>
 <br/>
