#117 Deployment of Hint redesign and many other changes

--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -42,6 +42,31 @@
         and MacOS copy/cut/paste <i>from</i> ELS. This is a known problem with Linux and Java.</li>
 </ul>
 
+<h3>29 January 2024</h3>
+<ul>
+    <li>
+        Added Hints management to the System menu.
+        <ul>
+            <li>See System, Hints, Help for details.</li>
+        </ul>
+    </li>
+    <li>Completely redesigned the Hints implementation, see Issue #117.</li>
+    <li>Added a toolbar. May be hidden using the View menu.</li>
+    <li>Added notification icons when either Hints or an ELS update are available.</li>
+    <li>Added dynamic tooltips of values to most tables when it is too long and truncated with ellipsis ...</li>
+    <li>Fixed a show/hide hidden files bug.</li>
+    <li>Fixed a variety of small bugs.</li>
+    <li>Made several user interface refinements.</li>
+</ul>
+
+<h3>6 January 2024</h3>
+<ul>
+    <li>Fixed Hint parsing bug.</li>
+    <li>Changed "Use last publisher/subscriber" handling.</li>
+    <li>Fixed mock\scripts\windows batch files path problem.</li>
+    <li>Adjusted some internal documentation.</li>
+</ul>
+
 <h3>4 January 2024</h3>
 <ul>
     <li>Fixed button handling bug in Jobs.</li>
