--- a/src/com/corionis/els/resources/hints_en_US.html
+++ b/src/com/corionis/els/resources/hints_en_US.html
@@ -75,6 +75,8 @@
     <ul>
     <li>A Hint Keys file of Libraries (back-ups) participating in Hints.</li>
     <li>A Hint Tracker/Server Library to manage Hint data.</li>
+    <li>For a remote Hint Server an Authentication Keys file of ELS instances that are
+        allowed to connect is also required.</li>
 </ul>
 </p>
 
