#122 Extended the Hint Server Operations Tool in Navigator

--- a/src/com/corionis/els/resources/operations_en_US.html
+++ b/src/com/corionis/els/resources/operations_en_US.html
@@ -94,7 +94,7 @@ appear depends on the selected mode.</p>
     -a | --authorize [password] : Used with listeners to define the password a user would type interactively to gain
     access to higher-level commands when using a terminal mode.</li>
 
-  <li id="opts">Auth keys<br/>
+  <li id="opts">Authentication keys<br/>
     -A | --auth-keys [file] : Used to authenticate both workstations and publishers instead of requiring a specific
     system defined by -p|-P and -s|S.</li>
 
@@ -130,7 +130,7 @@ appear depends on the selected mode.</p>
     -k | --keys [key file] : Process Hints between publisher and subscriber.<br/>
     -K | --keys-only [keys file] : Process Hints on the publisher only then end.</li>
 
-  <li id="opts">Hints & Hint Server<br/>
+  <li id="opts">Hint Tracker & Hint Server<br/>
     -h | --hints [JSON file] : Enable local Hint Tracking. The JSON defines the location of the hint datastore.<br/>
     -H | ----hint-server [JSON file] : Run ELS in Hint Server mode for remote Hint Tracking.</li>
 
