#122 Minor UI changes

--- a/src/com/corionis/els/resources/hints_en_US.html
+++ b/src/com/corionis/els/resources/hints_en_US.html
@@ -144,6 +144,10 @@
     </p>
     <p>
         <br/>
+        For a remote Hint Server the Authentication Keys option is also required. <blockquote>-A | --auth-keys [file]</blockquote>
+    </p>
+    <p>
+        <br/>
         The -K | --keys-only option executes Hints and other back-up options, such as --duplicates,
         but does not perform a back-up operation.
     </p>
