#122 Added Changelist to web site

--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -1,35 +1,6 @@
 <html>
 <head>
-    <style>
-        html, body {
-            font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
-        }
-
-        div {
-            margin-left: 10px;
-            margin-right: 4px;
-        }
-
-        table {
-            border-bottom: 1px solid;
-            margin: 0 4px 4px;
-            padding: 4px;
-            width: 100%;
-        }
-
-        th {
-            border-bottom: 1px solid ;
-            text-align: left;
-        }
-
-        td {
-            text-align: left;
-        }
-
-        ul {
-            margin-left: 22px;
-        }
-    </style>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
 <h2>Recent Changes</h2>
@@ -49,6 +20,7 @@
     <li>Added --marker "arg" option to aid with scripting, skipping and ignored in ELS.</li>
     <li>Fixed Libraries, General tab sizing bug with a scrollpane.</li>
     <li>Fixed Open Subscriber transfer sftp bug.</li>
+    <li>Added Changelist of latest deployment to web site.</li>
 </ul>
 
 <h3>27 March 2024</h3>
