#122 Added .DS_Store to the mock Linux Library JSON files for macOS

--- a/src/com/corionis/els/resources/libraries_en_US.html
+++ b/src/com/corionis/els/resources/libraries_en_US.html
@@ -86,7 +86,7 @@
     A list of filenames to be ignored during back-up operations. Java regular expressions are supported. See Tools, Renamer help
     for details on regular expressions.
     <br/><br/>
-    Examples: (?i)desktop\.ini, Thumbs\.db</li>
+    Examples: (?i)desktop\.ini, Thumbs\.db, \.DS_Store</li>
 
 </ul>
 
