--- a/src/com/corionis/els/resources/gettingstarted_en_US.html
+++ b/src/com/corionis/els/resources/gettingstarted_en_US.html
@@ -72,23 +72,24 @@ the Browser are used by the Tools and Jobs. Selections may be changed while work
 e.g. using the Duplicate Finder select the Publisher and click "Run ...", then select the Subscriber and
 click "Run ..." again.</p>
 
-<p>&nbsp;</p>
-
 <p>The Publisher and Subscriber tabs present the logical library structure. The System tabs present that
 computer's entire directory tree.</p>
+
+<h3>Libraries</h3>
+<p>Libraries are the core of ELS that define the parameters of an ELS instance. Those include
+how to access ELS remotely, which files to ignore, minimum storage space for each location,
+and the names and source(s) of each logical library.</p>
 
 <h3>Remote Subscribers and Hints</h3>
 <p>If a Subscriber is remote or Hints will be used Hint Keys and Authentication Keys are required. Use
 the System menu selections to define those using the keys from the Publisher and Subscriber libraries.</p>
 
-<p>&nbsp;</p>
-
 <p>Authentication Keys define Libraries that are allowed to connect to this ELS. Those may include publishers,
-subscribers and Navigators. Hint Keys defined which instances are involved in Hint tracking.</p>
+subscribers and Navigators.</p>
 
-<p>&nbsp;</p>
+<p>Hint Keys defined which publishers and subscribers are involved in Hint tracking.</p>
 
-<p>The System menu selections for Blacklist and Whitelist define which IP addresses are allowed to connect
+<p>Blacklist and Whitelist define which IP addresses are allowed to connect
 to this ELS. Optional, but a good way to avoid hack attempts.</p>
 
 <h3>Tools</h3>
@@ -98,7 +99,43 @@ into Jobs.</p>
 
 <h3>Jobs</h3>
 <p>Jobs are combinations of one or more Tools. Jobs are composed of Tasks which are a Tool with selections
-for the publisher and subscriber.</p>
+for the Publisher, Subscriber, and Hint Server as required.</p>
+
+<h3>Ways to Execute ELS</h3>
+<p>ELS is a multi-faceted tool that may be executed in a variety of ways.</p>
+
+<h4>From Navigator</h4>
+<p>The provided start-up script executes the ELS Navigator user interface with no arguments.
+That tells Navigator to use the previous publisher, subscriber, etc.</p>
+
+<p>Inside Navigator there are two execution tools:</p>
+
+<ul>
+    <li>File, Generate will generate a command line for the current configuration
+    including loaded publisher, subscriber, etc. That command line may be copied to
+    the clipboard or used to create a desktop shortcut.<br/><br/></li>
+    <li>Jobs, Manage has two options:<br/><br/></li>
+    <ol>
+        <li>Run ... that will execute the selected Job inside the current Navigator.<br/><br/></li>
+        <li>Generate / Run ... will generate a command line for the current Job and
+        offers either foreground or background immediate execution with its Run button outside
+        of the current Navigator, copy to the clipboard or create a desktop shortcut for
+        the currently-selected Job.</li>
+    </ol>
+</ul>
+
+<h4>From Command Line</h4>
+<p>ELS may also be exeuted from the command line two ways:</p>
+
+<ul>
+    <li>Using either short or long options to define all the arguments needed for an Operation.<br/><br/></li>
+    <li>Defining a Job inside Navigator then executing it from the command line.</li>
+</ul>
+
+<h4>Note for Linux users</h4>
+<p>When executing ELS from the command line with cron, or a task scheduler, set the
+-c | --console-level to Off so it only logs to the -d | --debug-level file and not
+stdout to avoid cron error messages.</p>
 
 <br/>
 <br/>
